--- a/teaching/25S-5218/index.htm
+++ b/teaching/25S-5218/index.htm
@@ -305,7 +305,7 @@ course website regularly for updated reading materials.</font>
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/14 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br>1/14 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Introduction</b> </font>
 			</td>
@@ -322,7 +322,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/21 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 1/21 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Machine learning overview (cont)</b> </font>
 			</td>
@@ -340,7 +340,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  1/28 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  <b>Week 3</b> <br> 1/28 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4"><b>Neural network basics-2</b>  </font>
 			</td>
@@ -358,7 +358,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/4 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 2/4 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4"><b>PyTorch Tutorial</b>  </font>
 			</td>
@@ -376,7 +376,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/11 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 2/11 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4"><b>Deep neural network training-3</b>  </font>
 			</td>
@@ -399,7 +399,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">2/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"><b>Week 6</b> <br> 2/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
@@ -427,7 +427,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 2/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
@@ -460,7 +460,31 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/4 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/4 <br> 3/6 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>Project Proposal Preparation</b>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/11-3/13   </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000"> 
+				Project proposal due to 3/13
+			</font> </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 				<font size="4"> 
 						<ul style="margin-top:5px;margin-bottom:5px;">
@@ -476,7 +500,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/6 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/20 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 				<font size="4"> 
 						<ul style="margin-top:5px;margin-bottom:5px;">
@@ -492,18 +516,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/11-3/13   </font></td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 				<font size="4"> 
 					<b>Transformers</b>
@@ -523,7 +536,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/20 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/27 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
@@ -541,7 +554,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/1 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<b>Advanced Topics</b>
@@ -560,7 +573,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>3/27 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>4/3 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<ul style="margin-top:5px;margin-bottom:5px;">
@@ -575,7 +588,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/1 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/8 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<ul style="margin-top:5px;margin-bottom:5px;">
@@ -593,7 +606,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/3 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/10 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<ul style="margin-top:5px;margin-bottom:5px;">
@@ -608,14 +621,16 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/8-4/29 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15-4/29 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<b>Project Presentation</b>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> <font size="4" color="#FF0000"> 
+				Project report due to 4/21
+			</font></font> </font></td>
 		</tr>
 
 		<tr>
@@ -625,11 +640,11 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 				<font size="4" color="#FF0000"> 
 					Date: TBD, at K110
-			</font>
+				</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
-		</tr> -->
+		</tr>
 
 
 	<!-- 
