--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -179,7 +179,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Exploiting Language Power for Time Series Forecasting with Exogenous Variables</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Chengyang Yu</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 04-07-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
